--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,12 @@
-#app {
+body {
   width: 100vw;
   height: 100vh;
+  margin: 0;
   overflow: hidden;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
+  background: #282835;
 }
